# csa-sar-imaging

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROGRESS.md  README.md  requirements.txt  train.py
TestChirpScalingAlgo/: TestChirpScalingAlgo.py
TestImagingPar/: TestConstructor.py  TestEchoSigGen.py  TestImagingPar.py  azimuth_freq_axis_hz.csv  azimuth_time_axis_sec.csv  range_freq_axis_hz.csv  range_time_axis_sec.csv
TestIterRecovAlgo/: TestIterRecovAlgo.py  input_par.json
TestMultiPointTarget/: AnalyzeIterResult.py  TestImageGen.py  TestMultiPointTarget.py  calc_perf_metric.py  input_par.json  input_par_img.json  point_target_location.json  post_proc.py
UmbraDataProc/: categorize_data.py  download_data.py  generate_point_target.py  map.html  raw_data_analysis.py  umbra_denoising.py
UmbraDataProc/tsoying_naval_base_analysis/: comparison.md
diagram/drawio/: image_to_echo.drawio  multi_point_target.drawio  sim_flow.drawio
document/: folder_structure.md  multi_point_target_sim_result.md  performance_metrics.md  simulation_parameter.md  simulation_setup.md
document/simulation_method/: simulation_method.tex
document/simulation_report/: performance_metrics_table.tex  simulation_report.tex  umbra_denoising_table.tex
fftw/: libfftw3-3.lib
gen_raw_data/: gen_raw_data.py
image/: multi_point_target.drawio
include/: util.cpp  util.h
sar_ship_detect/: .gitignore  README.md  convert_hrsid_to_yolo.py  infer.py  requirements.txt  results.md  split_inshore_offshore.py
sar_ship_detect/docs/: TRAINING.md  results_inshore.md  results_offshore.md
sar_ship_detect/scripts/: download_hrsid.sh
ship_detect/: README.md  dataset.yaml  detect.py  requirements-cpu.txt
src/: ChirpScalingAlgo.cpp  ChirpScalingAlgo.h  EchoSigGenPar.cpp  EchoSigGenPar.h  ImagingPar.cpp  ImagingPar.h  PointTarget.cpp  PointTarget.h  SigPar.cpp  SigPar.h  TestChirpScalingAlgo.cpp  TestImagingPar.cpp  TestIterRecovAlgo.cpp  TestMultiPointTarget.cpp  main.cpp
src/apps/: gen_echo_signal.cpp
src/calc_acc/: linear_to_db_scale.cpp
zlib_deps/: zlib.lib
